// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.drone;

option go_package = "openpitrix.io/openpitrix/pkg/pb/drone;openpitrix_drone";

import "google/protobuf/timestamp.proto";

service DroneService {
	rpc GetInfo (Empty) returns (Info);
	rpc GetConfdConfig (Empty) returns (ConfdConfig);
	rpc GetBackendConfig (Empty) returns (ConfdBackendConfig);
	rpc StartConfd (StartConfdRequest) returns (Empty);
	rpc StopConfd (Empty) returns (Empty);
	rpc GetConfdStatus (Empty) returns (ConfdStatus);

	rpc GetTemplateFiles (GetTemplateFilesRequest) returns (GetTemplateFilesResponse);
	rpc GetValues (GetValuesRequest) returns (GetValuesResponse);
}

service DroneServiceForFrontgate {
	rpc SubscribeCmdStatus (SubscribeCmdStatusRequest) returns (stream SubscribeCmdStatusResponse);
	rpc GetRegisterCmdStatus (GetRegisterCmdStatusRequest) returns (GetRegisterCmdStatusResponse);
}

message Info {
	string drone_ip = 1;
	ConfdConfig confd_config = 2;
	ConfdBackendConfig confd_backend_config = 3;
}

// See https://godoc.org/openpitrix.io/libconfd#Config
message ConfdConfig {
	string conf_dir = 1;
	int32 interval = 2;
	bool noop = 3;
	string prefix = 4;
	bool sync_only = 5;
	string log_level = 6;
}

// See https://godoc.org/openpitrix.io/libconfd#BackendConfig
message ConfdBackendConfig {
	string type = 1;
	repeated string host = 2;
	string username = 3;
	string password = 4;
	string client_ca_keys = 5;
	string client_cert = 6;
	string client_key = 7;
}

message StartConfdRequest {
	ConfdConfig confd_config = 1;
	ConfdBackendConfig confd_backend_config = 2;
}

message ConfdStatus {
	int32 process_id = 1;
	string status = 2;
	google.protobuf.Timestamp up_time = 3;
}

message SubscribeCmdStatusRequest {
	string subtask_id = 1;
}
message SubscribeCmdStatusResponse {
	string status = 1;
}

message GetRegisterCmdStatusRequest {
	string subtask_id = 1;
}
message GetRegisterCmdStatusResponse {
	string status = 1;
}

message GetTemplateFilesRequest {
	string regexp = 1;
}
message GetTemplateFilesResponse {
	repeated string files = 1;
}

message GetValuesRequest {
	repeated string keys = 1;
}
message GetValuesResponse {
	map<string,string> values = 1;
}

message Empty {}
